[project]
name = "langchain-output-parsers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.36.0",
    "langchain>=1.2.6",
    "langchain-core>=1.2.7",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
]
